# Slowpoke

./: .gitignore  LICENSE  Makefile  README.md
cpp/: .gitignore  LICENSE  Makefile  README.md  env.bat  vcbuildflags
cpp/src/: bmp.cpp  bmp.h  camera.h  main.cpp  material.h  object.h  rtstd.h  scene.h  tracer.cpp  tracer.h  virtualtracer.h  worker.cpp  worker.h
cpp/src/materials/: dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  metallic.cpp  metallic.h
cpp/src/objects/: plane.h  sphere.h
cpp/src/workers/: threaded_worker.cpp  threaded_worker.h
hs/: Makefile  make.bat
hs/src/: main.hs  scene.hs
hs/src/Math/: matrix.hs
hs/src/Math/Geom/: primitives.hs
hs/test/: basic.txt
renderboy/: .gitignore  README.md
renderboy/raytrace/: main.hs  math.hs  parser.hs  test.txt
src/: Slowpoke.cabal  main.hs  math.hs  parser.hs  raytracer.hs  renderboy.cabal  test.txt
src/Math/: matrix.hs  ops.hs  vec.hs
src/Math/Geom/: intersections.hs  primitives.hs  shapes.hs
test/: basic.txt
