name:                Slowpoke
version:             0.0.0.2
synopsis:            A toy raytracer
description:         It sometimes produces pretty pictures.
license:             MIT
author:              David Yu
maintainer:          lewenyu@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
  build-depends:       base >=4.4, gloss-raster >= 1.8.2.1, gloss, JuicyPixels >= 3.1.7, parsec >= 3.1.7, template-haskell, vector
  default-language:    Haskell2010
